# nngl-meiyan

./: BeautySdkDemo.cpp  BeautySdkDemo.h  BeautySdkDemo.ui  CMakeLists.txt  MyGlView.cpp  MyGlView.h  README.md  main.cpp  mainwindowdemo.cpp  mainwindowdemo.h  mainwindowdemo.ui
nnglsdk/include/: CBeautySdk.h
nnglsdk/lib/: nnglsdk.lib
prebuild/: filterImage.bundle  license.lic
